--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.5.0",
     "gatsby": "^2.23.11",
+    "gatsby-cli": "^3.6.0",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-catch-links": "^2.3.7",
     "gatsby-plugin-google-fonts": "^1.0.1",
